@@ -1,21 +1,29 @@
 package de.uni_hildesheim.mump.ui.courseList;
 
+import android.app.Activity;
+import android.os.AsyncTask;
+import android.os.Build;
 import android.os.Bundle;
 import android.view.LayoutInflater;
 import android.view.View;
 import android.view.ViewGroup;
 
 import androidx.annotation.NonNull;
+import androidx.annotation.RequiresApi;
 import androidx.fragment.app.Fragment;
 import androidx.lifecycle.ViewModelProvider;
 import androidx.recyclerview.widget.LinearLayoutManager;
 import androidx.recyclerview.widget.RecyclerView;
 
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.concurrent.Executors;
+import java.util.stream.Collectors;
 
 import de.uni_hildesheim.mump.R;
+import de.uni_hildesheim.mump.api.Api;
 import de.uni_hildesheim.mump.databinding.FragmentCourselistBinding;
 
 public class CourseListFragment extends Fragment {
@@ -24,6 +32,7 @@ public class CourseListFragment extends Fragment {
     private RecyclerView recyclerView;
     private TextAdapter adapter;
 
+    @RequiresApi(api = Build.VERSION_CODES.O)
     public View onCreateView(@NonNull LayoutInflater inflater,
                              ViewGroup container, Bundle savedInstanceState) {
 
@@ -36,9 +45,21 @@ public class CourseListFragment extends Fragment {
         adapter = new TextAdapter(new ArrayList<>());
         recyclerView.setAdapter(adapter);
 
-        // Add dynamic items
-        List<String> items = Arrays.asList("foo", "bar", "foobar");
-        adapter.addItems(items);
+        Executors.newSingleThreadExecutor().execute(() -> {
+            // Add dynamic items
+            try {
+                List<String> courseNames = Api.INSTANCE.getAllCourses().stream()
+                        .map(course -> course.name())
+                        .collect(Collectors.toList());
+                getActivity().runOnUiThread(() -> {
+                    adapter.addItems(courseNames);
+                });
+            } catch (IOException e) {
+                getActivity().runOnUiThread(() -> {
+                    adapter.addItems(List.of("IOException: " + e.getMessage()));
+                });
+            }
+        });
 
         return root;
     }
